--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # This file contains configuration flags to customize your site
 #
 
-theme: jekyll-theme-slate
+theme: jekyll-theme-minimal
 
 # Name of your site (displayed in the header)
 name: William Woof
