--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: William Woof
+name: William Woof's Blog
 
 # Short bio or description (displayed in the header)
-description: 
+description: A blog about nothing in particular
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: 
+avatar: https://avatars3.githubusercontent.com/u/9828880?v=3&s=460
 
 #
 # Flags below are optional
